; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/cli/extr_cli-decode.c_add_set_or_show_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/cli/extr_cli-decode.c_add_set_or_show_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_list_element = type { i32, i8*, i32 }

@set_cmd = common dso_local global i32 0, align 4
@show_cmd = common dso_local global i32 0, align 4
@empty_sfunc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cmd_list_element* (i8*, i32, i32, i32, i8*, i8*, %struct.cmd_list_element**)* @add_set_or_show_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cmd_list_element* @add_set_or_show_cmd(i8* %0, i32 %1, i32 %2, i32 %3, i8* %4, i8* %5, %struct.cmd_list_element** %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca %struct.cmd_list_element**, align 8
  %15 = alloca %struct.cmd_list_element*, align 8
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store i8* %5, i8** %13, align 8
  store %struct.cmd_list_element** %6, %struct.cmd_list_element*** %14, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i8*, i8** %13, align 8
  %19 = load %struct.cmd_list_element**, %struct.cmd_list_element*** %14, align 8
  %20 = call %struct.cmd_list_element* @add_cmd(i8* %16, i32 %17, i32* null, i8* %18, %struct.cmd_list_element** %19)
  store %struct.cmd_list_element* %20, %struct.cmd_list_element** %15, align 8
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @set_cmd, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %28, label %24

24:                                               ; preds = %7
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* @show_cmd, align 4
  %27 = icmp eq i32 %25, %26
  br label %28

28:                                               ; preds = %24, %7
  %29 = phi i1 [ true, %7 ], [ %27, %24 ]
  %30 = zext i1 %29 to i32
  %31 = call i32 @gdb_assert(i32 %30)
  %32 = load i32, i32* %9, align 4
  %33 = load %struct.cmd_list_element*, %struct.cmd_list_element** %15, align 8
  %34 = getelementptr inbounds %struct.cmd_list_element, %struct.cmd_list_element* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 8
  %35 = load i32, i32* %11, align 4
  %36 = load %struct.cmd_list_element*, %struct.cmd_list_element** %15, align 8
  %37 = getelementptr inbounds %struct.cmd_list_element, %struct.cmd_list_element* %36, i32 0, i32 2
  store i32 %35, i32* %37, align 8
  %38 = load i8*, i8** %12, align 8
  %39 = load %struct.cmd_list_element*, %struct.cmd_list_element** %15, align 8
  %40 = getelementptr inbounds %struct.cmd_list_element, %struct.cmd_list_element* %39, i32 0, i32 1
  store i8* %38, i8** %40, align 8
  %41 = load %struct.cmd_list_element*, %struct.cmd_list_element** %15, align 8
  %42 = load i32, i32* @empty_sfunc, align 4
  %43 = call i32 @set_cmd_sfunc(%struct.cmd_list_element* %41, i32 %42)
  %44 = load %struct.cmd_list_element*, %struct.cmd_list_element** %15, align 8
  ret %struct.cmd_list_element* %44
}

declare dso_local %struct.cmd_list_element* @add_cmd(i8*, i32, i32*, i8*, %struct.cmd_list_element**) #1

declare dso_local i32 @gdb_assert(i32) #1

declare dso_local i32 @set_cmd_sfunc(%struct.cmd_list_element*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
